fix: Rebuild mobile navbar menu and update alignment

--- a/app/_styles/hero.module.css
+++ b/app/_styles/hero.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - 93px); /* excludes navbar height */
+  min-height: 100vh;
   max-width: var(--max-width);
   padding-block: 48px;
   margin: 0 auto;
@@ -66,7 +66,7 @@
 /* Media query */
 @media screen and (max-width: 810px) {
   .hero {
-    min-height: calc(100vh - 76px);
+    min-height: 100vh;
   }
 
   .hero > .container {
